--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
     <title>ФК ПОЛІССЯ</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <header>
+        <h1>"ФУТБОЛЬНИЙ КЛУБ ПОЛІССЯ"</h1>  
+        <img src="img/fk-polissya.jpeg"alt=" Логотип ФК ПОЛІССЯ "> 
+    </header>
+    
+    <main>
+    
+    </main>
+
+    <footer>
+        Автор сайту: Фурман Максим
+    </footer>
 <h1>"ФУТБОЛЬНИЙ КЛУБ ПОЛІССЯ"</h1>  
 <img src="img/fk-polissya.jpeg"alt- " логотип ФК ПОЛІССЯ "> 
 <p>«Полісся» — український футбольний клуб із Житомира.
