Додав нову інформацію

--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
                 <h3>Побудова нового стадіону</h3>
                 <p></p>
             </article>
-            <article></article>
+            <article>
+                <h3>Очікування нового матчу</h3>
+                <p></p>
+            </article>
         </section>
-        <section></section>
+        <section>
+            <h2>Новини</h2>
+                <p></p>
+        </section>
         <section></section>
         <section></section>
         <section></section>
