додано інформацію в новинах

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
             <h2>Новини</h2>
             <p></p>
         </section>
-        <section></section>
+        <section>
+            <h3>Полісся" зіграло другий матч на зборах в Туреччині. Команда Імада Ашура продовжує підготовку до другої частин...</h3>
+            <p></p>
+        </section>
         <section></section>
         <section></section>
         <section></section>
