--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <p></p>
         </section>
         <section>
-            <h3>Полісся" зіграло другий матч на зборах в Туреччині. Команда Імада Ашура продовжує підготовку до другої частин...</h3>
-            <p></p>
+            <p><h3>Полісся" зіграло другий матч на зборах в Туреччині. Команда Імада Ашура продовжує підготовку до другої частин...
+            </h3></p>
         </section>
         <section></section>
         <section></section>
