змінено код для тексту

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <p></p>
         </section>
         <section>
-            <p><h3>Полісся" зіграло другий матч на зборах в Туреччині. Команда Імада Ашура продовжує підготовку до другої частин...
-            </h3></p>
+            <h3><p>Полісся" зіграло другий матч на зборах в Туреччині. Команда Імада Ашура продовжує підготовку до другої частин...
+            </p></h3>
         </section>
         <section></section>
         <section></section>
