--- a/index.html
+++ b/index.html
@@ -17,21 +17,23 @@
     <main>
         <section>
             <h2>Основна інформація</h2>
-            <article>
-                <h3>ФК ПОЛІССЯ</h3>
-                <p>«Полісся» — український футбольний клуб із Житомира.
-                    Заснований 1959 року.
-                    Припинив виступи в чемпіонатах України в 2005 році.
-                    Відновлений 2016 року як МФК «Житомир».</p>
-            </article>
-            <article>
-                <h3>Побудова нового стадіону</h3>
-                <p></p>
-            </article>
-            <article>
-                <h3>Очікування нового матчу</h3>
-                <p></p>
-            </article>
+            <div class="highlights-content">
+                <article>
+                    <h3>ФК ПОЛІССЯ</h3>
+                    <p>«Полісся» — український футбольний клуб із Житомира.
+                        Заснований 1959 року.
+                        Припинив виступи в чемпіонатах України в 2005 році.
+                        Відновлений 2016 року як МФК «Житомир».</p>
+                </article>
+                <article>
+                    <h3>Побудова нового стадіону</h3>
+                    <p></p>
+                </article>
+                <article>
+                    <h3>Очікування нового матчу</h3>
+                    <p></p>
+                </article>
+            </div>
         </section>
         <section>
             <h2>Новини</h2>
