--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <main>
-        <section>
+        <section id="highlights">
             <h2>Основна інформація</h2>
             <div class="highlights-content">
                 <article>
